Add detailed documentation for Phase 1 summary statistics in Phase1.ipynb
Added inline comments explaining the definitions and interpretations of key summary metrics:
- Avg_pairwise_sub_unweighted / weighted
- Mean_final_vs_sub_unweighted / weighted
- Consensus_Gain_proxy_unweighted / weighted

These notes clarify how each metric quantifies subgroup agreement, final-vs-subteam alignment, 
and consensus gain after reconciliation. No changes were made to computation logic or outputs.

--- a/Materials/Scripts/Phase1.ipynb
+++ b/Materials/Scripts/Phase1.ipynb
@@ -361,6 +361,32 @@
     "    consensus_gain_un = (mean_final_vs_sub_un - avg_pair_un) if not np.isnan(mean_final_vs_sub_un) else np.nan\n",
     "    consensus_gain_w = (mean_final_vs_sub_w - avg_pair_w) if not np.isnan(mean_final_vs_sub_w) else np.nan\n",
     "\n",
+    "    # --------------------------------------------\n",
+    "    # 📘 Summary statistic definitions (Phase 1)\n",
+    "    # --------------------------------------------\n",
+    "    # These summary metrics quantify agreement and consensus improvement among\n",
+    "    # human sub-teams and the final reconciled (human) concept set in Phase 1.\n",
+    "    # Each is computed both unweighted (concepts treated equally) and weighted\n",
+    "    # (using record-count or log-weighted scaling to emphasize clinically prevalent concepts).\n",
+    "    #\n",
+    "    # Avg_pairwise_sub_unweighted / weighted:\n",
+    "    #     → Average pairwise F1-score across all human subteam arms for a given disease.\n",
+    "    #       Captures internal consistency and agreement *within* subgroups before reconciliation.\n",
+    "    #\n",
+    "    # Mean_final_vs_sub_unweighted / weighted:\n",
+    "    #     → Mean F1-score between each individual human subteam and the final reconciled human set.\n",
+    "    #       Measures how closely each subgroup aligns with the adjudicated consensus set.\n",
+    "    #\n",
+    "    # Consensus_Gain_proxy_unweighted / weighted:\n",
+    "    #     → Calculated as (Mean_final_vs_sub − Avg_pairwise_sub).\n",
+    "    #       Acts as a proxy for \"consensus gain\" — the degree to which reconciliation improved\n",
+    "    #       alignment compared to pre-reconciliation subgroup consistency.\n",
+    "    #\n",
+    "    # Interpretation:\n",
+    "    #   - Higher Avg_pairwise_sub → subteams already agreed before reconciliation.\n",
+    "    #   - Higher Mean_final_vs_sub → strong agreement between subteams and final set.\n",
+    "    #   - Positive Consensus_Gain_proxy → reconciliation increased consistency across subteams.\n",
+    "    # --------------------------------------------\n",
     "    # Save summary row\n",
     "    row = {\n",
     "        'Disease': disease_code,\n",
