--- a/Materials/Scripts/Phase1.ipynb
+++ b/Materials/Scripts/Phase1.ipynb
@@ -188,9 +188,9 @@
     "# --------------------------------------------\n",
     "if os.path.exists(CONCEPT_COUNTS_FILE):\n",
     "    rc_df = pd.read_csv(CONCEPT_COUNTS_FILE, dtype=str)\n",
-    "    if 'conceptId' in rc_df.columns and 'record_count' in rc_df.columns:\n",
+    "    if 'concept_id' in rc_df.columns and 'record_count' in rc_df.columns:\n",
     "        rc_df['record_count'] = rc_df['record_count'].astype(float)\n",
-    "        record_map = dict(zip(rc_df['conceptId'].astype(str), rc_df['record_count'].astype(float)))\n",
+    "        record_map = dict(zip(rc_df['concept_id'].astype(str), rc_df['record_count'].astype(float)))\n",
     "    else:\n",
     "        record_map = {}\n",
     "else:\n",
@@ -205,9 +205,9 @@
     "    tp = set(arm_set) & set(ref_set)\n",
     "    fp = set(arm_set) - set(ref_set)\n",
     "    fn = set(ref_set) - set(arm_set)\n",
-    "    WTP = sum(record_map.get(str(c), 0.0) for c in tp)\n",
-    "    WFP = sum(record_map.get(str(c), 0.0) for c in fp)\n",
-    "    WFN = sum(record_map.get(str(c), 0.0) for c in fn)\n",
+    "    WTP = sum(np.log1p(record_map.get(str(c), 0.0)) for c in tp)\n",
+    "    WFP = sum(np.log1p(record_map.get(str(c), 0.0)) for c in fp)\n",
+    "    WFN = sum(np.log1p(record_map.get(str(c), 0.0)) for c in fn)\n",
     "    P = WTP / (WTP + WFP) if (WTP + WFP) else np.nan\n",
     "    R = WTP / (WTP + WFN) if (WTP + WFN) else np.nan\n",
     "    F1 = (2 * P * R / (P + R)) if (P and R and (P + R)) else np.nan\n",
@@ -533,28 +533,6 @@
     "# ----------------------------------------------------------\n",
     "# Load Concepts\n",
     "# ----------------------------------------------------------\n",
-    "def load_included_concepts(file_path):\n",
-    "    try:\n",
-    "        df = pd.read_csv(file_path, dtype=str)\n",
-    "    except Exception as e:\n",
-    "        print(f\"[load_included_concepts] ❌ Error reading {file_path}: {e}\")\n",
-    "        return set()\n",
-    "\n",
-    "    cols = [c.strip() for c in df.columns]\n",
-    "    norm_map = {re.sub(r'[^a-z0-9]', '', c.lower()): c for c in cols}\n",
-    "    chosen = None\n",
-    "    if 'conceptid' in norm_map:\n",
-    "        chosen = norm_map['conceptid']\n",
-    "    else:\n",
-    "        for norm, orig in norm_map.items():\n",
-    "            if 'concept' in norm and 'id' in norm:\n",
-    "                chosen = orig\n",
-    "                break\n",
-    "    if not chosen:\n",
-    "        return set()\n",
-    "\n",
-    "    vals = df[chosen].dropna().astype(str).str.strip().str.replace(r'\\.0+$', '', regex=True)\n",
-    "    return set(vals[vals != ''])\n",
     "\n",
     "# ----------------------------------------------------------\n",
     "# Load record count metadata\n",
@@ -563,7 +541,7 @@
     "if os.path.exists(\"ConceptRecordCounts.csv\"):\n",
     "    rc = pd.read_csv(\"ConceptRecordCounts.csv\", dtype=str)\n",
     "    rc['record_count'] = rc['record_count'].astype(float)\n",
-    "    record_map = dict(zip(rc['conceptId'].astype(str), rc['record_count']))\n",
+    "    record_map = dict(zip(rc['concept_id'].astype(str), rc['record_count']))\n",
     "\n",
     "# ----------------------------------------------------------\n",
     "# Similarity Function\n",
