Fix merge key mismatch: use left_on=conceptId and right_on=concept_id in record count merge

--- a/Materials/Scripts/Phase1.5.ipynb
+++ b/Materials/Scripts/Phase1.5.ipynb
@@ -887,7 +887,8 @@
     "    if record_count_df is not None and \"conceptId\" in df.columns:\n",
     "        df_gs2 = df_gs2.merge(\n",
     "            record_count_df[[\"conceptId\", \"record_count\"]],\n",
-    "            on=\"conceptId\",\n",
+    "            left_on=\"conceptId\",\n",
+    "            right_on=\"concept_id\",\n",
     "            how=\"left\"\n",
     "        )\n",
     "\n",
