Apply log weighting in compute_weighted_f1() and fix merge key alignment (conceptId ↔ concept_id)

--- a/Materials/Scripts/Phase2.ipynb
+++ b/Materials/Scripts/Phase2.ipynb
@@ -588,11 +588,11 @@
     "    \"\"\"Compute weighted precision, recall, and F1.\"\"\"\n",
     "    df = record_count_df.copy()\n",
     "    df[\"record_count\"] = pd.to_numeric(df[\"record_count\"], errors=\"coerce\").fillna(0)\n",
-    "    df = df[df[\"conceptId\"].isin(set(arm_concepts) | set(gold_standard))]\n",
+    "    df = df[df[\"concept_id\"].isin(set(arm_concepts) | set(gold_standard))]\n",
     "\n",
-    "    df[\"TP\"] = df[\"conceptId\"].isin(arm_concepts & gold_standard)\n",
-    "    df[\"FP\"] = df[\"conceptId\"].isin(arm_concepts - gold_standard)\n",
-    "    df[\"FN\"] = df[\"conceptId\"].isin(gold_standard - arm_concepts)\n",
+    "    df[\"TP\"] = df[\"concept_id\"].isin(arm_concepts & gold_standard)\n",
+    "    df[\"FP\"] = df[\"concept_id\"].isin(arm_concepts - gold_standard)\n",
+    "    df[\"FN\"] = df[\"concept_id\"].isin(gold_standard - arm_concepts)\n",
     "\n",
     "    WTP = df.loc[df[\"TP\"], \"record_count\"].sum()\n",
     "    WFP = df.loc[df[\"FP\"], \"record_count\"].sum()\n",
@@ -694,7 +694,7 @@
     "    record_count_path = os.path.join(SCRIPT_DIR, \"ConceptRecordCounts.csv\")\n",
     "    if not os.path.exists(record_count_path):\n",
     "        print(\"⚠️ ConceptRecordCounts.csv not found — weighted metrics may be skipped.\")\n",
-    "        record_count_df = pd.DataFrame(columns=[\"conceptId\", \"record_count\"])\n",
+    "        record_count_df = pd.DataFrame(columns=[\"concept_id\", \"record_count\"])\n",
     "    else:\n",
     "        record_count_df = pd.read_csv(record_count_path, dtype=str)\n",
     "\n",
@@ -1357,17 +1357,20 @@
     "# 🧩 Weighted F1 function\n",
     "# --------------------------------------------\n",
     "def compute_weighted_f1(arm_concepts, gold_standard, record_count_df):\n",
-    "    df = record_count_df[record_count_df[\"conceptId\"].isin(set(arm_concepts) | set(gold_standard))].copy()\n",
+    "    df = record_count_df[record_count_df[\"concept_id\"].isin(set(arm_concepts) | set(gold_standard))].copy()\n",
     "    if df.empty:\n",
     "        return np.nan\n",
     "\n",
-    "    df[\"TP\"] = df[\"conceptId\"].isin(arm_concepts & gold_standard)\n",
-    "    df[\"FP\"] = df[\"conceptId\"].isin(arm_concepts - gold_standard)\n",
-    "    df[\"FN\"] = df[\"conceptId\"].isin(gold_standard - arm_concepts)\n",
+    "    # Apply log(1 + count) transformation\n",
+    "    df[\"log_weight\"] = np.log1p(df[\"record_count\"])\n",
+    "    \n",
+    "    df[\"TP\"] = df[\"concept_id\"].isin(arm_concepts & gold_standard)\n",
+    "    df[\"FP\"] = df[\"concept_id\"].isin(arm_concepts - gold_standard)\n",
+    "    df[\"FN\"] = df[\"concept_id\"].isin(gold_standard - arm_concepts)\n",
     "\n",
-    "    WTP = df.loc[df[\"TP\"], \"record_count\"].sum()\n",
-    "    WFP = df.loc[df[\"FP\"], \"record_count\"].sum()\n",
-    "    WFN = df.loc[df[\"FN\"], \"record_count\"].sum()\n",
+    "    WTP = df.loc[df[\"TP\"], \"log_weight\"].sum()\n",
+    "    WFP = df.loc[df[\"FP\"], \"log_weight\"].sum()\n",
+    "    WFN = df.loc[df[\"FN\"], \"log_weight\"].sum()\n",
     "\n",
     "    P_W = WTP / (WTP + WFP) if (WTP + WFP) else np.nan\n",
     "    R_W = WTP / (WTP + WFN) if (WTP + WFN) else np.nan\n",
